lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | IF LP Exp RP error ELSE Stmt
   36     | WHILE error RP Stmt
   37     | Exp error
   38     | RETURN Exp error

   39 DefList: Def DefList
   40        | %empty
   41        | error SEMI

   42 Def: Specifier DecList SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | Exp LB error RB
   66    | ID LP error RP

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 22 35 36 37 38 41 65 66
SEMI (258) 4 5 29 31 41 42
COMMA (259) 9 23 44 67
ASSIGNOP (260) 46 47
PLUS (261) 51
MINUS (262) 52 56
STAR (263) 53
DIV (264) 54
AND (265) 48
OR (266) 49
NOT (267) 57
DOT (268) 61
TYPE (269) 10
LP (270) 20 21 22 32 33 34 35 55 58 59 66
RP (271) 20 21 22 32 33 34 35 36 55 58 59 66
LB (272) 18 60 65
RB (273) 18 19 60 65
LC (274) 12 26
RC (275) 12 26
STRUCT (276) 12 13
RETURN (277) 31 38
IF (278) 32 33 35
ELSE (279) 33 35
WHILE (280) 34 36
INT (281) 18 63
FLOAT (282) 64
ID (283) 14 16 17 20 21 22 58 59 61 62 66
RELOP (284) 50
SUB (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7, on right: 2
ExtDecList (36)
    on left: 8 9, on right: 4 9
Specifier (37)
    on left: 10 11, on right: 4 5 6 7 25 42
StructSpecifier (38)
    on left: 12 13, on right: 11
OptTag (39)
    on left: 14 15, on right: 12
Tag (40)
    on left: 16, on right: 13
VarDec (41)
    on left: 17 18 19, on right: 8 9 18 19 25 45 46
FunDec (42)
    on left: 20 21 22, on right: 6
VarList (43)
    on left: 23 24, on right: 20 23
ParamDec (44)
    on left: 25, on right: 23 24
CompSt (45)
    on left: 26, on right: 6 30
StmtList (46)
    on left: 27 28, on right: 26 27
Stmt (47)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 32 33 34 35
    36
DefList (48)
    on left: 39 40 41, on right: 12 26 39
Def (49)
    on left: 42, on right: 39
DecList (50)
    on left: 43 44, on right: 42 44
Dec (51)
    on left: 45 46, on right: 43 44
Exp (52)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66, on right: 29 31 32 33 34 35 37 38 46 47 48 49 50 51 52 53
    54 55 56 57 60 61 65 67 68
Args (53)
    on left: 67 68, on right: 58 67


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . LP error RP

    LP  shift, and go to state 20

    $default  reduce using rule 17 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . error RB

    error  shift, and go to state 22
    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    SEMI  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   22       | ID LP . error RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

   19 VarDec: VarDec error . RB

    RB  shift, and go to state 36


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 17


State 24

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


State 25

   26 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   41 DefList: error . SEMI

    SEMI  shift, and go to state 41


State 28

   42 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 30

   39 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 30


State 31

   22 FunDec: ID LP error . RP

    RP  shift, and go to state 47


State 32

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 33

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 48


State 34

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 35

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 24 (VarList)


State 36

   19 VarDec: VarDec error RB .

    $default  reduce using rule 19 (VarDec)


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 40

   26 CompSt: LC DefList . StmtList RC

    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 41

   41 DefList: error SEMI .

    $default  reduce using rule 41 (DefList)


State 42

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . error RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    error     shift, and go to state 22
    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 24

    SEMI   reduce using rule 45 (Dec)
    COMMA  reduce using rule 45 (Dec)


State 43

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 44

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 43 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 47

   22 FunDec: ID LP error RP .

    $default  reduce using rule 22 (FunDec)


State 48

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . error RB
   25 ParamDec: Specifier VarDec .

    error  shift, and go to state 22
    LB     shift, and go to state 24

    COMMA  reduce using rule 25 (ParamDec)
    RP     reduce using rule 25 (ParamDec)


State 49

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 50

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 68
    ParamDec         go to state 35


State 51

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 52

   56 Exp: MINUS . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 69


State 53

   57 Exp: NOT . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 70


State 54

   55 Exp: LP . Exp RP

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 71


State 55

   31 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp error

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 72


State 56

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt
   35     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 73


State 57

   34 Stmt: WHILE . LP Exp RP Stmt
   36     | WHILE . error RP Stmt

    error  shift, and go to state 74
    LP     shift, and go to state 75


State 58

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 59

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 60

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .
   66    | ID . LP error RP

    LP  shift, and go to state 76

    $default  reduce using rule 62 (Exp)


State 61

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 62

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 77


State 63

   27 StmtList: Stmt . StmtList

    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 78
    Stmt      go to state 63
    Exp       go to state 64


State 64

   29 Stmt: Exp . SEMI
   37     | Exp . error
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    error     shift, and go to state 79
    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90


State 65

   46 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 91


State 66

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 67

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 92
    Dec      go to state 44


State 68

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 69

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 88
    LB   shift, and go to state 89

    $default  reduce using rule 56 (Exp)


State 70

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    MINUS  shift, and go to state 83
    DOT    shift, and go to state 88
    LB     shift, and go to state 89

    $default  reduce using rule 57 (Exp)


State 71

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 93
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90


State 72

   31 Stmt: RETURN Exp . SEMI
   38     | RETURN Exp . error
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    error     shift, and go to state 94
    SEMI      shift, and go to state 95
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90


State 73

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt
   35     | IF LP . Exp RP error ELSE Stmt

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 96


State 74

   36 Stmt: WHILE error . RP Stmt

    RP  shift, and go to state 97


State 75

   34 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 98


State 76

   58 Exp: ID LP . Args RP
   59    | ID LP . RP
   66    | ID LP . error RP

    error  shift, and go to state 99
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    RP     shift, and go to state 100
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp   go to state 101
    Args  go to state 102


State 77

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 78

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 79

   37 Stmt: Exp error .

    $default  reduce using rule 37 (Stmt)


State 80

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 81

   47 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 103


State 82

   51 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 104


State 83

   52 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 105


State 84

   53 Exp: Exp STAR . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 106


State 85

   54 Exp: Exp DIV . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 107


State 86

   48 Exp: Exp AND . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 108


State 87

   49 Exp: Exp OR . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 109


State 88

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 110


State 89

   60 Exp: Exp LB . Exp RB
   65    | Exp LB . error RB

    error  shift, and go to state 111
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 112


State 90

   50 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60

    Exp  go to state 113


State 91

   46 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90

    $default  reduce using rule 46 (Dec)


State 92

   44 DecList: Dec COMMA DecList .

    $default  reduce using rule 44 (DecList)


State 93

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 94

   38 Stmt: RETURN Exp error .

    $default  reduce using rule 38 (Stmt)


State 95

   31 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 96

   32 Stmt: IF LP Exp . RP Stmt
   33     | IF LP Exp . RP Stmt ELSE Stmt
   35     | IF LP Exp . RP error ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 114
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90


State 97

   36 Stmt: WHILE error RP . Stmt

    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60

    CompSt  go to state 61
    Stmt    go to state 115
    Exp     go to state 64


State 98

   34 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 116
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90


State 99

   66 Exp: ID LP error . RP

    RP  shift, and go to state 117


State 100

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 101

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB
   67 Args: Exp . COMMA Args
   68     | Exp .

    COMMA     shift, and go to state 118
    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90

    $default  reduce using rule 68 (Args)


State 102

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 119


State 103

   47 Exp: Exp . ASSIGNOP Exp
   47    | Exp ASSIGNOP Exp .
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89
    RELOP     shift, and go to state 90

    $default  reduce using rule 47 (Exp)


State 104

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   51    | Exp PLUS Exp .
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    MINUS  shift, and go to state 83
    STAR   shift, and go to state 84
    DIV    shift, and go to state 85
    DOT    shift, and go to state 88
    LB     shift, and go to state 89

    $default  reduce using rule 51 (Exp)


State 105

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   52    | Exp MINUS Exp .
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    MINUS  shift, and go to state 83
    STAR   shift, and go to state 84
    DIV    shift, and go to state 85
    DOT    shift, and go to state 88
    LB     shift, and go to state 89

    $default  reduce using rule 52 (Exp)


State 106

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   53    | Exp STAR Exp .
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    MINUS  shift, and go to state 83
    DOT    shift, and go to state 88
    LB     shift, and go to state 89

    $default  reduce using rule 53 (Exp)


State 107

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   54    | Exp DIV Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   65    | Exp . LB error RB

    MINUS  shift, and go to state 83
    DOT    shift, and go to state 88
    LB     shift, and go to state 89

    $default  reduce using rule 54 (Exp)


State 108
